<resources>
    <string name="app_name">PrimerParcial</string>
    <string name="prod_total">Producción total</string>
    <string name="prod_actual">Producción actual</string>
    <string name="mas5">+5</string>
    <string name="mas15">+15</string>
    <string name="mas30">+30</string>
    <string name="mas50">+50</string>
    <string name="porcentaje">Porcentaje</string>
    <string name="calcular">Calcular</string>
</resources>
